# AI_Book

./: .gitignore  404.html  DOCS_INDEX.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  SITEMAP_README.md  SYSTEM_SUMMARY.md  docker-compose.qdrant.yml  docusaurus.config.js  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  sidebars.js  sitemap.json  sitemap.xml  temp_spec_input.txt
.claude/: README.md  settings.local.json
.claude/commands/: add-docs.md  chatbot-status.md  debug-chatbot.md  deploy-backend.md  deploy-frontend.md  rag-test.md  reindex.md
.claude/skills/: docusaurus-plugin.md  embedding-pipeline.md  rag-query.md
.docusaurus/: client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
.specify/memory/: claude-agent-context.md  constitution.md
.specify/skills/: __init__.py  chat_engine.py  chat_ui_builder.py  cli_runner.py  debugger.py  docusaurus_builder.py  env_manager.py  fastapi_builder.py  rag_ingestor.py  (+3 more)
auth-server/: package-lock.json  package.json  render.yaml
blog/: atom.xml  index.html  rss.xml
database/: .gitignore  DEPLOYMENT.md  Dockerfile  agent.py  api.py  app.py  chatbot.py  main.py  models.py  nixpacks.toml  pyproject.toml  render.yaml  requirements.txt  retrieval.py
docs/: glossary.md  intro.md
markdown-page/: index.html
scripts/: copy-chatbot-assets.js
src/: config.py  logging_config.py  main.py
static/: sitemap.xml
tests/: test_api.py
(+405 files in other folders)
